[package]
name = "cheap-clone"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/al8n/cheap-clone"
homepage = "https://github.com/al8n/cheap-clone"
documentation = "https://docs.rs/cheap-clone"
description = "A trait which indicates that such type can be cloned cheaply."
license = "MIT/Apache-2.0"
rust-version = "1.56.0"

[features]
default = []
alloc = []
std = ["alloc"]

[dependencies]
paste = "1"

bytes = { version = "1", default-features = false, optional = true }
either = { version = "1", default-features = false, optional = true }
smol_str = { version = "0.2", default-features = false, optional = true }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
